[gd_scene load_steps=5 format=3 uid="uid://dun1cpardk2xw"]

[ext_resource type="Script" uid="uid://dsgxioo8wstff" path="res://game.gd" id="1_qclsr"]
[ext_resource type="PackedScene" uid="uid://dsw8raqgacxsc" path="res://player.tscn" id="2_a7q7f"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[sub_resource type="Theme" id="Theme_l26od"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qclsr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.009999999999999998
autostart = true

[node name="Player" parent="." instance=ExtResource("2_a7q7f")]

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -32

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03529412, 0, 0.2627451, 1)

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_right = 101.0
offset_bottom = 53.0
text = "score : 0"

[node name="GameOverScreen" type="ColorRect" parent="CanvasLayer"]
z_index = 4096
custom_minimum_size = Vector2(1024, 600)
offset_right = 1921.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -65.0
offset_right = 98.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_l26od")
theme_type_variation = &"HeaderLarge"
text = "Game Over!!!"
uppercase = true

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45965642
anchor_top = 0.5259259
anchor_right = 0.539823
anchor_bottom = 0.5842593
offset_top = 6.1035156e-05
offset_right = 6.1035156e-05
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="FinalScoreLabel" type="Label" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.41200003
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -0.960022
offset_right = 53.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "Final Score : 0"

[node name="Node2D" type="Node2D" parent="."]

[node name="Node2D2" type="Node2D" parent="."]

[node name="Node2D3" type="Node2D" parent="."]

[node name="Node2D4" type="Node2D" parent="."]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
